Implement Log menu that displays log messages of each agent